--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "firebase": "^7.15.5",
     "lodash": "^4.17.19",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.5.5",
@@ -18,7 +19,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
-    },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
